@@ -164,6 +164,15 @@ It also allows the import of external objects via URL, either individual
 posts or actor URLs, in which case their recent outbox is imported.
 .Ss Account
 It's all about you.
+.Pp
+Some options to customize the site appearance:
+.Bl -tag -width skinny
+.It skinny
+Use a narrower column for the main display.
+.It apple
+Prefer Apple links for maps.
+The default is OpenStreetMap.
+.El
 .Sh ENVIRONMENT
 .Nm
 is designed to work with most browsers, but for optimal results it is
