@@ -48,6 +48,7 @@ type WhatAbout struct {
 type UserOptions struct {
 	SkinnyCSS bool   `json:",omitempty"`
 	Avatar    string `json:",omitempty"`
+	MapLink   string `json:",omitempty"`
 }
 
 type KeyInfo struct {
